fix: fixed clicking menu on mobile responsive

--- a/stories/compounds/navigation/navigation.module.css
+++ b/stories/compounds/navigation/navigation.module.css
@@ -13,7 +13,6 @@
 .hamBurgerContainer {
   position: fixed;
   z-index: 99999;
-  pointer-events: none;
 }
 
 .hamBurgerContent {
